<resources>
    <string name="app_name">PAM1-ATIVIDADE-LAYOUT</string>
    <string name="spinner">TESTE</string>
    <string name="textView">TIPO DE GASTO:</string>
    <string name="textView2">VALOR:</string>
    <string name="editText"> </string>
    <string name="textView3">DATA:</string>
    <string name="button">SELECIONE</string>
    <string name="textView4">DESCRIÇÃO:</string>
    <string name="editText3"> </string>
    <string name="textView5">LOCAL:</string>
    <string name="editText4"> </string>
    <string name="button2">SALVAR</string>
    <string name="textView8">DATA1</string>
    <string name="textView9">DATA2</string>
    <string name="button3">B1</string>
    <string name="button4">B2</string>
</resources>
